trimming more stuff

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Chris Willis",
-  "name": "Chris Willis Website",
+  "name": "Chris Willis",
   "icons": [
     {
       "src": "favicon.jpg",
